@@ -7,6 +7,7 @@ Fixed:
 Changes:
 - format1: removed older formatter in favor of format2
 - format2: add check for empty key
+- format2: function-specific delimiters
 - string: HX_basename (the fast variant) now recognizes the root directory
 - string: HX_basename now returns the trailing component with slashes
   instead of everything after the last slash (which may have been nothing)
